--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "loc8r",
+  "name": "book-code",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.15.2",
+    "body-parser": "~1.16.0",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.2.0",
-    "express": "~4.14.0",
+    "debug": "~2.6.0",
+    "express": "~4.14.1",
     "morgan": "~1.7.0",
-    "pug": "~2.0.0-beta6",
-    "serve-favicon": "~2.3.0"
+    "pug": "~2.0.0-beta10",
+    "serve-favicon": "~2.3.2"
   }
 }
