--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mongoose": "^4.9.1",
     "morgan": "~1.7.0",
     "pug": "~2.0.0-beta6",
+    "request": "^2.81.0",
     "serve-favicon": "~2.3.0"
   }
 }
